--- a/archive.html
+++ b/archive.html
@@ -4,10 +4,8 @@ title: Archive
 permalink: /archive/
 ---
     {% for post in site.posts %}
-
       <li>
         <a href="{{ post.url | prepend: site.baseurl }}">{{ post.title }} </a>
-       <span class="category-date">{{ post.date | date: "%B %e, %Y" }}</span>
+       <span class="category-date">{{ post.date | date: "%Y-%m-%d" }}</span>
       </li>
-
     {% endfor %}
