--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@ layout: default
 <ul id="pagination-flickr">
   {% if paginator.previous_page %}
     {% if paginator.previous_page == 1 %}
-    <li class="previous"><a href="/">&laquo;</a></li>
+    <li class="previous"><a href="/"><i class="fa fa-arrow-left"></i></a></li>
     {% else %}
-    <li class="previous"><a href="/page{{paginator.previous_page}}">&laquo;</a></li>
+    <li class="previous"><a href="/page{{paginator.previous_page}}"><i class="fa fa-arrow-left"></i></a></li>
     {% endif %}
   {% else %}
-    <li class="previous-off">&laquo;</li>
+    <li class="previous-off"><i class="fa fa-arrow-left"></i></i></li>
   {% endif %}
       {% if paginator.page == 1 %}
       <li class="active">1</li>
@@ -36,9 +36,9 @@ layout: default
       {% endif %}
     {% endfor %}
   {% if paginator.next_page %}
-    <li class="next"><a href="/page{{paginator.next_page}}">&raquo;</a></li>
+    <li class="next"><a href="/page{{paginator.next_page}}"><i class="fa fa-arrow-right"></i></a></li>
   {% else %}
-    <li class="next-off">&raquo;</li>
+    <li class="next-off"><i class="fa fa-arrow-right"></i></li>
   {% endif %}
 </ul>
 </div>
