更改footer,修改permalink为/y/m/d/t

--- a/index.html
+++ b/index.html
@@ -55,6 +55,6 @@ layout: default
       <a href="{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a>
     </li>
   {% endfor %}
-    <li class="listing-seperator"><a href="/archive/">Long long ago</a></li>
+    <li class="listing-seperator"><a href="/archive/">Long ago</a></li>
   </ul>
 </div>
