--- a/about.html
+++ b/about.html
@@ -3,6 +3,7 @@ layout: default
 title: About
 permalink: /about/
 ---
+<!-- This is write to my girl,pleace change it if you copy my blog -->
 <div id="code">
 <span class="keyword">def</span> <span class="value">main</span>():</span><br />
 <span class="placeholder"/><span class="comments">'''</span><br />
