--- a/404.html
+++ b/404.html
@@ -3,4 +3,5 @@ title: 404
 layout: page
 ---
 
+<!-- search children -->
 <script type="text/javascript" src="http://www.qq.com/404/search_children.js" charset="utf-8"></script>
